    that is being connected to, differs from the one that was present when the cached values were populated.
    
    To replace the default implementation, implement CacheAdapterFactory<String, Map<String, String>>, and
    use the fully-qualified class name of this implementation for "serverConfigCacheFactory".

09-06-12 - Version 5.1.22
  - Fix for Bug#57662, Incorrect Query Duration When useNanosForElapsedTime Enabled.

  - Fix for Bug#65503, ResultSets created by PreparedStatement.getGeneratedKeys() are not close()d.

  - Fix for Bug#63800, getVersionColumns() does not return timestamp fields; always empty.
    Added support of ON UPDATE CURRENT_TIMESTAMP for TIMESTAMP and DATETIME fields.

  - Fix for Bug#41752, Can't connect mysqld which character_set_server=ucs2.

  - Fix for Bug#65508, getCharsetNameForIndex() should be faster.

  - Fix for Bug#14563127, Load-balanced connection fails to select valid host, closes connection
    on re-balance.

07-05-12 - Version 5.1.21
  - Added new built-in authentication plugin com.mysql.jdbc.authentication.Sha256PasswordPlugin
    ("sha256_password").

  - Fix for Bug#64731, StringUtils.getBytesWrapped throws StringIndexOutOfBoundsException.

  - Added new built-in authentication plugin com.mysql.jdbc.authentication.MysqlClearPasswordPlugin
    ("mysql_clear_password"). It allows C/J based clients to connect to MySQL accounts which use
    PAM authentication for example. SSL connection required for this authentication method.
    If SSL is not enabled then authentication which requires "mysql_clear_password" will lead to an error.

  - Fix for Bug#13980303, Auth plugin's confidentiality requirements are not checked after Auth Switch Request.

  - Fix for Bug#64205, Connected through Connector/J 5.1 to MySQL 5.5, the error message is garbled.

  - Fix for Bug#37931, Null Pointer Exception Thrown When specifying invalid character_set_results enc.

  - Fix for Bug#36662, TimeUtil.java: MEST mapping n/a.
